# World_Cup_System

./: AVLMultiVariable.h  AVLTree.h  AVLTreeExtraPointer.h  CMakeLists.txt  ComplexNode.h  Dry.docx  Exception.h  GenericNode.h  Node.h  NodeAdditionalPointer.h  NodeOpt2.h  Player.cpp  Player.h  Players.h  Teams.cpp  Teams.h  ToDoList.txt  avltestlior.cpp  main23a1.cpp  submissions.txt  test.in  wet1_outline.docx  worldcup23a1.cpp  worldcup23a1.h  תרגיל רטוב 1.docx
